<resources>
    <string name="app_name">Acoustic Barcodes</string>
    <string name="title_activity_main">Acoustic Barcodes</string>
    <string name="project_title">Acoustic Barcodes</string>
    <string name="authors_line">By Spencer Barton &amp; David Lu</string>
    <string name="class_name">18–551 Spring 2015</string>
    <string name="barcode_btn_start">Start Scan</string>
    <string name="barcode_btn_stop">Stop Scan</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="scan_btn_recording">Recording</string>
    <string name="scan_btn_done">"Saved "</string>
    <string name="title_activity_main_activity2"></string>
    <string name="pref_main_title">Main Settings</string>
    <string name="pref_debug_plots_title">Debug Plots</string>
    <string name="pref_debug_plots_sum">Turn on plots for debugging</string>
    <string name="pref_debug_plots_default">false</string>
    <string name="pref_debug_plots">pref_debug_plots</string>
    <string name="pref_code_len">pref_code_len</string>
    <string name="pref_start_bits">pref_start_bits</string>
    <string name="pref_stop_bits">pref_stop_bits</string>
    <string name="pref_spec_low_freq">pref_spec_low_freq</string>
    <string name="pref_spec_fft_sz">pref_spec_fft_sz</string>
    <string name="pref_spec_overlap_factor">pref_spec_overlap_factor</string>
    <string name="pref_flt_len">pref_flt_len</string>
    <string name="pref_flt_sigma">pref_flt_sigma</string>
</resources>
