<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_main_title"
        android:key="pref_main_settings">

        <CheckBoxPreference
            android:key="@string/pref_debug_plots"
            android:title="@string/pref_debug_plots_title"
            android:summary="@string/pref_debug_plots_sum"
            android:defaultValue="@string/pref_debug_plots_default" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Barcode Settings"
        android:key="pref_alg_transient">

        <com.spencerbarton.acousticbarcodes.Settings.EditTextIntegerPreference
            android:key="pref_code_len"
            android:title="Code Length"
            android:summary="Set the code length excluding start and stop bits"
            android:defaultValue="3" />

        <ListPreference
            android:key="pref_start_bits"
            android:title="Start Bits"
            android:summary="Choose the type of start bits in the encoding"
            android:defaultValue="11"
            android:entries="@array/start_bit_array"
            android:entryValues="@array/start_bit_array_values" />

        <ListPreference
            android:key="pref_stop_bits"
            android:title="Stop Bits"
            android:summary="Choose the type of stop bits in the encoding"
            android:defaultValue="01"
            android:entries="@array/start_bit_array"
            android:entryValues="@array/start_bit_array_values" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Algorithm Spectrogram Controls"
        android:key="pref_alg_spec">

        private static final int LOWEST_FREQ = 6;
        private static final int FFT_SZ = 64;
        private static final int OVERLAP_FACTOR = 32;
        <com.spencerbarton.acousticbarcodes.Settings.EditTextIntegerPreference
            android:key="pref_spec_low_freq"
            android:title="Lowest Freq Bin"
            android:summary="Set the pass band for the spectrogram filtering."
            android:defaultValue="6" />

        <com.spencerbarton.acousticbarcodes.Settings.EditTextIntegerPreference
            android:key="pref_spec_fft_sz"
            android:title="Spectrogram FFT Size"
            android:summary="Set the FFT size for the spectrogram."
            android:defaultValue="64" />

        <com.spencerbarton.acousticbarcodes.Settings.EditTextIntegerPreference
            android:key="pref_spec_overlap_factor"
            android:title="Spectrogram Overlap Factor"
            android:summary="Set the number of overlapped samples."
            android:defaultValue="32" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="Algorithm Filter Controls"
        android:key="pref_alg_transient">

        <com.spencerbarton.acousticbarcodes.Settings.EditTextIntegerPreference
            android:key="pref_flt_len"
            android:title="Gaussian Filter Length"
            android:summary="Set the Gaussian filter used before transient detection."
            android:defaultValue="10" />

        <com.spencerbarton.acousticbarcodes.Settings.EditTextIntegerPreference
            android:key="pref_flt_sigma"
            android:title="Gaussian Filter Sigma"
            android:summary="Set the Gaussian filter used before transient detection."
            android:defaultValue="4" />

    </PreferenceCategory>

</PreferenceScreen>